--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore system files
+.DS_Store
+Thumbs.db
+
+# Ignore IDE/editor-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.tmp
+
+# Ignore OS-specific files
+.AppData/
+.cache/
